--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -1,18 +1,22 @@
-SRCS	= MyPhoneBook.cpp
+SRCS	= MyPhoneBook.cpp ClassPhoneBook.cpp ClassContact.cpp
 
 OBJS	= ${SRCS:.cpp=.o}
 
 CFLAGS	= -Wall -Werror -Wextra -O2 -std=c++98
 
+LFLAGS = -I${INCL}
+
 CC	= c++
 
 NAME	= phonebook
 
+INCL	= ClassContact.hpp ClassPhoneBook.hpp MyPhoneBook.hpp
+
 .c.o:
-	${CC} ${CFLAGS} -c $< -o ${<:.cpp=.o}
+	${CC} ${CFLAGS} -c $< -o ${<:.cpp=.o} ${LFLAGS}
 
 ${NAME}:	${OBJS}
-		${CC} -o ${NAME} ${OBJS}
+		${CC} -o ${NAME} ${OBJS}  ${LFLAGS}
 
 all:	${NAME}
 
