--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -1,5 +1,7 @@
 # MAKEFILE #
 
+export MAKEFLAGS += --silent
+
 SRCS	= ${SUBDIR}/MyPhoneBook.cpp\
 		  ${SUBDIR}/ClassPhoneBook.cpp\
 		  ${SUBDIR}/ClassContact.cpp
