--- a/.gitignore
+++ b/.gitignore
@@ -30,11 +30,13 @@
 *.exe
 *.out
 *.app
+*.log
+Session.vim
+.DS_Store
 megaphone
 phonebook
 GBU
 brainz
 zombiehorde
-*.log
-Session.vim
-.DS_Store
+String
+violence
