--- a/cpp00/ex00/Makefile
+++ b/cpp00/ex00/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: fclivaz <fclivaz@student.42lausanne.ch>    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/04/12 15:50:19 by fclivaz           #+#    #+#              #
+#    Updated: 2024/04/12 15:53:05 by fclivaz          ###   LAUSANNE.ch        #
+#                                                                              #
+# **************************************************************************** #
+
 SRCS	= megaphone.cpp
 
 OBJS	= ${SRCS:.cpp=.o}
