--- a/cpp01/ex03/Makefile
+++ b/cpp01/ex03/Makefile
@@ -1,4 +1,14 @@
-# MAKEFILE #
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: fclivaz <fclivaz@student.42lausanne.ch>    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/04/12 15:52:13 by fclivaz           #+#    #+#              #
+#    Updated: 2024/04/12 15:53:00 by fclivaz          ###   LAUSANNE.ch        #
+#                                                                              #
+# **************************************************************************** #
 
 export MAKEFLAGS += --silent
 
